--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "latest",
-    "vitepress": "^1.6.3"
+    "eslint": "latest",
+    "vitepress": "latest"
   },
   "pnpm": {
     "peerDependencyRules": {
